<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_tab_home_new"
        android:title="@string/menu_home">
            <shape>
                <solid android:color="@android:color/transparent" />
                <stroke
                        android:height="1dp"
                        android:width="6dp"
                        android:color="@color/main_purple" />
            </shape>
    </item>


    <item
            android:id="@+id/nav_draws"
            android:icon="@drawable/ic_tab_draw"
            android:title="@string/menu_draws">
    </item>

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_tab_message"
        android:title="@string/menu_messages">
    </item>

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_tab_notification"
        android:title="@string/menu_notifications">
    </item>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_tab_profile"
        android:title="@string/menu_profile">
    </item>


</menu>