<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etMailLogin"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMailLogin1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:fontFamily="@font/q_regular"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                android:hint="@string/auth_mail"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintTop_toBottomOf="@id/etMailLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordLogin1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:fontFamily="@font/q_regular"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                android:hint="@string/auth_password"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etPasswordLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="24dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/q_medium"
            android:text="@string/auth_forgot_password"/>


    <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
            android:background="@drawable/bg_button"
            android:text="@string/auth_login"
            android:textColor="@color/white"
            android:fontFamily="@font/q_bold"
            android:textSize="14sp"
            android:layout_margin="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>