<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etFullname"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullname1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:fontFamily="@font/q_regular"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                android:hint="@string/auth_fullname"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintTop_toBottomOf="@id/etFullname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMail1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:fontFamily="@font/q_regular"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                android:hint="@string/auth_mail"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintTop_toBottomOf="@id/etMail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:fontFamily="@font/q_regular"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                android:hint="@string/auth_password"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>


    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
            android:id="@+id/cbAgreement"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintBottom_toBottomOf="@id/tvAgreement"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintEnd_toStartOf="@id/tvAgreement"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:theme="@style/CheckBoxStyle"
    />

    <TextView
            android:id="@+id/tvAgreement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@id/cbAgreement"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:textColor="@color/white"
            android:fontFamily="@font/q_regular"
            android:textSize="14sp"
            android:text="@string/auth_agreement"/>

    <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAgreement"
            android:background="@drawable/bg_button"
            android:text="@string/auth_register"
            android:textColor="@color/white"
            android:fontFamily="@font/q_bold"
            android:textSize="14sp"
            android:layout_margin="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>