<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:background="@color/lighter_Grey"
        tools:context=".ui.profile.profilesettings.ProfileSettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:elevation="0dp"
            android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar_layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfileSettingsProfile"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintDimensionRatio="w, 1:1"
                    android:src="@drawable/ic_profile"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/main_purple"
                    android:layout_marginTop="32dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintWidth_percent="0.12"
                    app:layout_constraintDimensionRatio="w, 1:1"
                    app:layout_constraintStart_toEndOf="@id/ivProfileSettingsProfile"
                    app:layout_constraintEnd_toStartOf="@id/ivProfileSettingsProfile"
                    app:layout_constraintHorizontal_bias="0.2"
                    app:layout_constraintBottom_toBottomOf="@id/ivProfileSettingsProfile"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/main_purple"
                    android:layout_marginTop="16dp"
                    android:src="@color/white"/>

            <EditText
                    android:id="@+id/etFullnameProfileSettings"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:layout_constraintTop_toBottomOf="@id/ivProfileSettingsProfile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:nextFocusForward="@id/etPasswordProfileSettings1"
                    android:background="@drawable/bg_edittext_profile_settings"
                    android:layout_marginTop="24dp"
                    android:paddingStart="16dp"
                    android:cursorVisible="false"
                    android:fontFamily="@font/q_regular"
                    android:textSize="14sp"
                    android:hint="@string/auth_fullname"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>

            <EditText
                    android:id="@+id/etEmaildProfileSettings1"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:layout_constraintTop_toBottomOf="@id/etFullnameProfileSettings"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/bg_edittext_profile_settings"
                    android:layout_marginTop="24dp"
                    android:paddingStart="16dp"
                    android:cursorVisible="false"
                    android:fontFamily="@font/q_regular"
                    android:textSize="14sp"
                    android:hint="@string/auth_mail"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>

            <Button
                    android:id="@+id/btnProfileSettingsSave"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etEmaildProfileSettings1"
                    android:layout_marginTop="24dp"
                    style="@style/ButtonStyle"
                    android:text="KAYDET"
                    android:background="@drawable/bg_button"/>


            <EditText
                    android:id="@+id/etPasswordProfileSettings1"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:layout_constraintTop_toBottomOf="@id/btnProfileSettingsSave"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:nextFocusForward="@id/etPasswordAgainProfileSettings1"
                    android:background="@drawable/bg_edittext_profile_settings"
                    android:layout_marginTop="24dp"
                    android:paddingStart="16dp"
                    android:cursorVisible="false"
                    android:inputType="textPassword"
                    android:fontFamily="@font/q_regular"
                    android:textSize="14sp"
                    android:hint="@string/auth_password_old"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>

            <EditText
                    android:id="@+id/etPasswordProfileSettings1New"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:layout_constraintTop_toBottomOf="@id/etPasswordProfileSettings1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:nextFocusForward="@id/etPasswordAgainProfileSettings1"
                    android:background="@drawable/bg_edittext_profile_settings"
                    android:layout_marginTop="24dp"
                    android:paddingStart="16dp"
                    android:cursorVisible="false"
                    android:inputType="textPassword"
                    android:fontFamily="@font/q_regular"
                    android:textSize="14sp"
                    android:hint="@string/auth_password_new"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>


            <EditText
                    android:id="@+id/etPasswordAgainProfileSettings1"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:layout_constraintTop_toBottomOf="@id/etPasswordProfileSettings1New"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:inputType="textPassword"
                    android:background="@drawable/bg_edittext_profile_settings"
                    android:layout_marginTop="24dp"
                    android:paddingStart="16dp"
                    android:cursorVisible="false"
                    android:fontFamily="@font/q_regular"
                    android:textSize="14sp"
                    android:hint="@string/auth_password_new"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>

            <Button
                    android:id="@+id/btnProfileSettingsChange"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etPasswordAgainProfileSettings1"
                    android:layout_marginTop="24dp"
                    style="@style/ButtonStyle"
                    android:text="DEĞİŞTİR"
                    android:background="@drawable/bg_button"/>


            <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnProfileSettingsChange"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="36dp"
                    app:layout_constraintVertical_bias="0.0"
                    android:layout_marginTop="36dp"
                    android:textSize="14sp"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/q_bold"
                    android:text="ÇIKIŞ YAP"
                    android:background="@drawable/bg_button_grey"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>